<resources>
    <string name="app_name">Spanish Basics</string>

    <!-- Category name for phrases [CHAR LIMIT=20] -->
    <string name="why_spanish">Why Spanish ?</string>

    <!-- Category name for the vocabulary words for colors [CHAR LIMIT=20] -->
    <string name="alphabets">Alphabets</string>

    <!-- Category name for the vocabulary words for numbers [CHAR LIMIT=20] -->
    <string name="numbers">Numbers</string>

    <!-- Category name for the vocabulary words for family members [CHAR LIMIT=20] -->
    <string name="colors">Colors</string>

    <!-- Category name for the vocabulary words for family members [CHAR LIMIT=20] -->
    <string name="family">Family</string>

    <!-- Category name for the vocabulary words for family members [CHAR LIMIT=20] -->
    <string name="organs">Organs</string>

    <!-- Category name for the vocabulary words for family members [CHAR LIMIT=20] -->
    <string name="animals">Animals</string>

    <!-- Category name for the vocabulary words for family members [CHAR LIMIT=20] -->
    <string name="phrases">Phrases</string>

    <!-- Category name for the vocabulary words for family members [CHAR LIMIT=20] -->
    <string name="daily">Daily usage Phrases</string>

</resources>


